# dimplex-controller-py

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  openapi.yaml  pyproject.toml
.githooks/: post-push
.github/workflows/: ci.yml  publish-to-pypi.yml  release-please.yml  test.yml  tests.yml
dimplex_controller/: __init__.py  auth.py  capabilities.py  cli.py  client.py  const.py  exceptions.py  models.py  telemetry.py
docs/: api-reference.md  compatibility.md  configuration.md  getting-started.md  research-live-power-and-setback.md  troubleshooting.md
tests/: fixtures.py  test_auth.py  test_capabilities.py  test_cassettes.py  test_cli.py  test_client.py  test_client_methods.py  test_models.py  test_telemetry.py  test_timeout.py
tests/fixtures/cassettes/: README.md  energy_report.json  hubs.json  overview.json  zones.json
