[tool.poetry]
name = "dimplex-controller"
version = "0.12.0"
description = "Python client for Dimplex heating controllers (GDHV IoT)"
authors = ["Kieran Roper"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KRoperUK/dimplex-controller-py"
repository = "https://github.com/KRoperUK/dimplex-controller-py"
keywords = ["dimplex", "heating", "control", "iot", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
packages = [{ include = "dimplex_controller" }]

[tool.poetry.scripts]
dimplex = "dimplex_controller.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^6.0.0"
aresponses = "^3.0.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"
twine = "^6.2.0"
python-dotenv = "^1.2.1"
mypy = "^1.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# E501 (line length) is handled by the formatter; long strings/comments are fine.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["dimplex_controller"]
ignore_missing_imports = true
# Incrementally strict — these catch real bugs without requiring a full rewrite.
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
# All async tests use asyncio; "auto" means new tests don't each need the
# @pytest.mark.asyncio decorator (existing markers remain valid).
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dimplex_controller"]

[tool.coverage.report]
show_missing = true
# Guardrail so coverage can't silently regress. Raise as coverage improves.
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
